--- a/local-defs.tex
+++ b/local-defs.tex
@@ -66,7 +66,7 @@
 \newcommand{\CovObs}{\boldsymbol{\Sigma}} % Time-independent covariance matrix across all output variables/objectives
 \newcommand{\SSR}{\Phi} % Sum of squared error (SSR) function, as a function of the parameter. 
 
-\newcommand{\SSRVecPredOut}[2]{\boldsymbol{\SSR}_{#1}^{(#2)}} % TODO: change this 
+\newcommand{\SSRVecPredOut}[2]{\SSR_{#1}^{(#2)}} % TODO: change this 
 
 
 % --------------------------------------------------------------------------------------------------
