--- a/gp_accelerated_mcmc.tex
+++ b/gp_accelerated_mcmc.tex
@@ -121,6 +121,30 @@ p(\stateMat | \bpar, \CovObs, \bphi)p(\bphi | \bpar) \priorDens(\bpar) \priorDen
 
 The below sections detail a Metropolis-within-Gibbs (MwG) scheme for sampling from this posterior. 
 
+% Gibbs Step for phi
+\subsection{Gibbs Step for $\bphi$}
+We consider an alternative update for $\bphi$; namely, a Gibbs update. The conditional posterior for $\bphi$ is given by 
+\begin{align*}
+p(\bphi | \bpar, \CovObs, \stateMat) 
+&\propto \prod_{\objIdx=1}^{\Nobj} \exp\left\{-\frac{\indexObj{\phi}}{2\sdObs^2_{\objIdx}} \right\} 
+	\Gaussian\left(\indexObj{\phi} | \GPMeanPredOut{\Ndesign}{\objIdx}(\bpar), \GPKerPredOut{\Ndesign}{\objIdx}(\bpar)\right) \\
+&\propto \prod_{\objIdx=1}^{\Nobj} \exp\left\{-\frac{1}{2} \frac{(\indexObj{\phi} - \indexObj{a}(\bpar))^2}{\GPKerPredOut{\Ndesign}{\objIdx}(\bpar)} \right\} \\
+&\propto \prod_{\objIdx=1}^{\Nobj} \Gaussian\left(\indexObj{\phi} | \indexObj{a}_{\Ndesign}(\bpar), \GPKerPredOut{\Ndesign}{\objIdx}(\bpar)\right)
+\end{align*}
+where $\indexObj{a}_{\Ndesign}(\bpar) := \GPMeanPredOut{\Ndesign}{\objIdx}(\bpar) - \frac{1}{2}\frac{\GPKerPredOut{\Ndesign}{\objIdx}(\bpar)}{\sdObs^2_{\objIdx}}$. We thus see that 
+the conditional distribution for $\bphi$ is given by another GP, with the same variance as before, but with the mean function decreased by an additive factor depending on the 
+ratio of the GP uncertainty $\GPKerPredOut{\Ndesign}{\objIdx}(\bpar)$ and the data likelihood noise $\sdObs^2_{\objIdx}$. We note that, 
+\begin{align*}
+p(\indexObj{\phi} | \bpar, \CovObs, \stateMat) \to \delta(\indexObj{\phi} - \GPMeanPredOut{\Ndesign}{\objIdx}(\bpar)) \text{ as } \GPKerPredOut{\Ndesign}{\objIdx}(\bpar) \to 0.
+\end{align*}
+This makes intuitive sense: if there is no uncertainty about the model-data misfit value, then the conditional draw will simply be the GP prediction $\GPMeanPredOut{\Ndesign}{\objIdx}(\bpar)$.
+Similarly, 
+\begin{align*}
+p(\indexObj{\phi} | \bpar, \CovObs, \stateMat) \to \Gaussian(\indexObj{\phi}|\GPMeanPredOut{\Ndesign}{\objIdx}(\bpar) , \GPKerPredOut{\Ndesign}{\objIdx}(\bpar)) \text{ as } \sdObs^2_{\objIdx} \to \infty.
+\end{align*}
+That is, in the case where the likelihood is essentially pure noise, then the conditional draw will be sampled from the GP $\SSRVecPredOut{\Ndesign}{\objIdx}(\bpar)$. In general, the 
+conditional for $\bphi$ balances the data fit with the GP predictive uncertainty.
+
 \subsection{Block $(\bpar, \bphi)$ update.}
 We consider a block Metropolis step for $\bpar$ and $\bphi$ jointly. Let $\propDens\left([\bpar, \bphi], [\tilde{\bpar}, \tilde{\bphi}] \right)$ be the density for the proposal distribution for 
 proposing $[\tilde{\bpar}, \tilde{\bphi}]$ given current state $[\bpar, \bphi]$. This yields a MH acceptance probability
@@ -151,32 +175,19 @@ Here, $\CovProp$ is some $\Npar \times \Npar$ proposal covariance. This choice o
 &= \max\left\{1, \exp\left\{\frac{1}{2} \sum_{\objIdx=1}^{\Nobj} \left(\frac{ \indexObj{\phi} - \indexObj{\tilde{\phi}}}{\sdObs^2_{\objIdx}}\right)\right\} \cdot \frac{\priorDens(\tilde{\bpar})}{\priorDens(\bpar)} \right\}
 \end{align*}
 
-\subsubsection{Proposal Option 2: Taking advantage of GP Predictive Correlation}
-We now try to obtained a better unformed proposal for $\tilde{\bphi}$ by leveraging the GP predictive correlation. \textbf{TODO}
+\subsubsection{Proposal Option 2:}
+We next consider adjusting the above proposal so that $\tilde{\bphi}$ is proposed from the conditional posterior $p(\tilde{\bphi}|\tilde{\bpar}, \CovObs, \stateMat)$ rather than the 
+conditional prior $p(\tilde{\bphi}|\tilde{\bpar})$:
+\begin{align*}
+\tilde{\bpar} &\sim \Gaussian(\bpar, \CovProp) \\
+\indexObj{\tilde{\phi}}|\tilde{\bpar} &\overset{ind}{\sim} \Gaussian\left(\indexObj{a}_{\Ndesign}(\tilde{\bpar}), \GPKerPredOut{\Ndesign}{\objIdx}(\tilde{\bpar})\right), 
+\end{align*}
+where $\indexObj{a}_{\Ndesign}(\tilde{\bpar})$ is the same mean function defined above. With this choice the acceptance ratio simplifies to 
+\begin{align*}
+\accProbMH([\bpar, \bphi], [\tilde{\bpar}, \tilde{\bphi}]) 
+&= \max\left\{1, \exp\left(\frac{1}{8}  \sum_{\objIdx=1}^{\Nobj} \frac{\GPKerPredOut{\Ndesign}{\objIdx}(\tilde{\bpar}) - \GPKerPredOut{\Ndesign}{\objIdx}(\bpar)}{\sigma^2_{\objIdx}} \right) \cdot \frac{\priorDens(\tilde{\bpar})}{\priorDens(\bpar)} \right\}.
+\end{align*}
 
-% Gibbs Step for phi
-\subsection{Gibbs Step for $\bphi$}
-We consider an alternative update for $\bphi$; namely, a Gibbs update. The conditional posterior for $\bphi$ is given by 
-\begin{align*}
-p(\bphi | \bpar, \CovObs, \stateMat) 
-&\propto \prod_{\objIdx=1}^{\Nobj} \exp\left\{-\frac{\indexObj{\phi}}{2\sdObs^2_{\objIdx}} \right\} 
-	\Gaussian\left(\indexObj{\phi} | \GPMeanPredOut{\Ndesign}{\objIdx}(\bpar), \GPKerPredOut{\Ndesign}{\objIdx}(\bpar)\right) \\
-&\propto \prod_{\objIdx=1}^{\Nobj} \exp\left\{-\frac{1}{2} \frac{(\indexObj{\phi} - \indexObj{a}(\bpar))^2}{\GPKerPredOut{\Ndesign}{\objIdx}(\bpar)} \right\} \\
-&\propto \prod_{\objIdx=1}^{\Nobj} \Gaussian\left(\indexObj{\phi} | \indexObj{a}(\bpar), \GPKerPredOut{\Ndesign}{\objIdx}(\bpar)\right)
-\end{align*}
-where $\indexObj{a}(\bpar) := \GPMeanPredOut{\Ndesign}{\objIdx}(\bpar) - \frac{1}{2}\frac{\GPKerPredOut{\Ndesign}{\objIdx}(\bpar)}{\sdObs^2_{\objIdx}}$. We thus see that 
-the conditional distribution for $\bphi$ is given by another GP, with the same variance as before, but with the mean function decreased by an additive factor depending on the 
-ratio of the GP uncertainty $\GPKerPredOut{\Ndesign}{\objIdx}(\bpar)$ and the data likelihood noise $\sdObs^2_{\objIdx}$. We note that, 
-\begin{align*}
-p(\indexObj{\phi} | \bpar, \CovObs, \stateMat) \to \delta(\indexObj{\phi} - \GPMeanPredOut{\Ndesign}{\objIdx}(\bpar)) \text{ as } \GPKerPredOut{\Ndesign}{\objIdx}(\bpar) \to 0.
-\end{align*}
-This makes intuitive sense: if there is no uncertainty about the model-data misfit value, then the conditional draw will simply be the GP prediction $\GPMeanPredOut{\Ndesign}{\objIdx}(\bpar)$.
-Similarly, 
-\begin{align*}
-p(\indexObj{\phi} | \bpar, \CovObs, \stateMat) \to \Gaussian(\indexObj{\phi}|\GPMeanPredOut{\Ndesign}{\objIdx}(\bpar) , \GPKerPredOut{\Ndesign}{\objIdx}(\bpar)) \text{ as } \sdObs^2_{\objIdx} \to \infty.
-\end{align*}
-That is, in the case where the likelihood is essentially pure noise, then the conditional draw will be sampled from the GP $\SSRVecPredOut{\Ndesign}{\objIdx}(\bpar)$. In general, the 
-conditional for $\bphi$ balances the data fit with the GP predictive uncertainty.
 
 % MH Step for u
 \subsection{MH Step for $\bpar$}
@@ -202,7 +213,7 @@ p(\CovObs | \bpar, \bphi, \stateMat)
 
 
 % MCMC Algorithm: Marginal Likelihood Approach
-\section{MCMC Algorithm: Marginal Likelihood Approach}
+% \section{MCMC Algorithm: Marginal Likelihood Approach}
 
 
 
