--- a/vsem_calibration_tests/gp_mcmc_comparison.Rmd
+++ b/vsem_calibration_tests/gp_mcmc_comparison.Rmd
@@ -25,6 +25,270 @@ source("gp_mcmc_functions.r")
 source("sequential_design_optimization.r")
 ```
 
+
+# 1D Linear Gaussian Model 
+```{r}
+# Linear Gaussian Model Setup. 
+linear_Gaussian_seed <- 72
+N_obs <- 100
+freq <- 1
+g <- matrix(sin(2*pi*freq*seq(1, N_obs)/N_obs), ncol = 1)
+sig2_eps <- 1
+sig2_0 <- matrix(1)
+mu0 <- 0
+
+linear_Gaussian_info <- generate_linear_Gaussian_test_data(linear_Gaussian_seed, N_obs = N_obs, D = 1, Sig_theta = sig2_0, G = g, sig2_eps = sig2_eps)
+linear_Gaussian_info$true_posterior$SSR <- get_computer_model_SSR(computer_model_data, theta_vals=linear_Gaussian_info$true_posterior$mean, na.rm=TRUE)
+computer_model_data <- linear_Gaussian_info$computer_model_data
+theta_prior_params <- linear_Gaussian_info$theta_prior_params
+
+
+plot(1:N_obs, computer_model_data$data_obs, main = "Ground Truth and Observed Data", xlab = "t")
+lines(1:N_obs, computer_model_data$data_ref, col = "red")
+```
+
+```{r}
+# Initial design and grid of points for plotting purposes. 
+
+# Initial design (round 0). 
+input_bounds <- matrix(c(min=qnorm(.01, theta_prior_params$param1, theta_prior_params$param2), 
+                         max=qnorm(.99, theta_prior_params$param1, theta_prior_params$param2)), ncol=1)
+rownames(input_bounds) <- c("min", "max")
+colnames(input_bounds) <- computer_model_data$pars_cal_names
+
+design_settings <- data.frame(N_design = 3, design_method = "LHS", design_seed = 5)
+init_design_info <- get_input_output_design(N_points = design_settings$N_design,
+                                            design_method = design_settings$design_method, 
+                                            scale_inputs = TRUE,
+                                            param_ranges = input_bounds,  
+                                            computer_model_data = computer_model_data, 
+                                            theta_prior_params = theta_prior_params)
+init_design_info$lpost <- calc_lpost_theta_product_lik(computer_model_data = computer_model_data, 
+                                                       theta_vals = init_design_info$inputs, 
+                                                       vars_obs = diag(computer_model_data$Sig_eps), 
+                                                       SSR = init_design_info$outputs,
+                                                       na.rm = TRUE, theta_prior_params = theta_prior_params, 
+                                                       return_list = FALSE)
+
+# Grid of points spread across prior (for plotting).  
+prior_grid_info <- get_input_output_design(N_points = 1000,
+                                           design_method = "grid", 
+                                           scale_inputs = TRUE,
+                                           param_ranges = init_design_info$input_bounds,
+                                           computer_model_data = computer_model_data, 
+                                           theta_prior_params = theta_prior_params, 
+                                           design_seed = design_settings$design_seed)
+prior_grid_info$lpost <- calc_lpost_theta_product_lik(computer_model_data = computer_model_data, 
+                                                      theta_vals = prior_grid_info$inputs, 
+                                                      vars_obs = diag(computer_model_data$Sig_eps), 
+                                                      SSR = prior_grid_info$outputs,
+                                                      na.rm = TRUE, theta_prior_params = theta_prior_params, 
+                                                      return_list = FALSE)
+
+
+# lpost
+plot(prior_grid_info$inputs, prior_grid_info$lpost, col = "red", type = "l", 
+     main = "Prior Design and True lpost values", xlab = "u", ylab = "Unnormalized log posterior")
+points(init_design_info$inputs, init_design_info$lpost, col = "black")
+
+# SSR 
+plot(prior_grid_info$inputs, prior_grid_info$outputs, col = "red", type = "l", 
+     main = "Prior Design and True Data Misfit values", xlab = "u", ylab = "Data Misfit")
+points(init_design_info$inputs, init_design_info$outputs, col = "black")
+
+```
+
+## GP Fit on Initial Design 
+
+```{r}
+# Emulator settings
+emulator_settings <- data.frame(gp_lib = c("hetGP"), 
+                                kernel = "Gaussian", 
+                                transformation_method = c("truncated"),
+                                emulator_target = "SSR",
+                                scale_X = TRUE, 
+                                normalize_y = TRUE)
+print(emulator_settings)
+
+# Fit emulators on initial design. 
+gp_fits <- fit_independent_GPs(X_train = init_design_info$inputs_scaled, Y_train = init_design_info$outputs_normalized, 
+                               gp_lib = emulator_settings$gp_lib, gp_kernel = emulator_settings$kernel)$fits
+emulator_info_list <- list(gp_fits = gp_fits, input_bounds = init_design_info$input_bounds, 
+                           output_stats = init_design_info$output_stats, settings = emulator_settings)
+
+# Induced log joint density (i.e. log unnormalized posterior density) emulator. 
+lpost_emulator <- get_lpost_emulator_obj(emulator_info_list = emulator_info_list, design_info_list = init_design_info, 
+                                         computer_model_data = computer_model_data, sig2_eps = sig2_eps, 
+                                         theta_prior_params = theta_prior_params, center_output = TRUE, scale_output = TRUE)
+
+# Plot initial emulator fit.
+pred_grid_init_design <- predict_lpost_emulator(inputs_new_scaled = prior_grid_info$inputs_scaled, lpost_emulator = lpost_emulator)
+upper_CI <- qnorm(.99, pred_grid_init_design$mean, sqrt(pred_grid_init_design$var))
+lower_CI <- qnorm(.01, pred_grid_init_design$mean, sqrt(pred_grid_init_design$var)) 
+
+plot(prior_grid_info$inputs, prior_grid_info$lpost, col = "red", type = "l", ylim = c(min(lower_CI), max(upper_CI)),
+     main = "lpost Initial GP Fit", xlab = "u", ylab = "Unnormalized log posterior")
+points(init_design_info$inputs, init_design_info$lpost, col = "black")
+lines(prior_grid_info$inputs, pred_grid_init_design$mean, col = "blue")
+lines(prior_grid_info$inputs, upper_CI, col = "gray")
+lines(prior_grid_info$inputs, lower_CI, col = "gray")
+
+```
+
+## Heatmap of joint (u, phi) posterior, p(u, phi|Y) (Sigma considered fixed/known here).
+```{r}
+phi_grid <- seq(min(prior_grid_info$outputs), max(prior_grid_info$outputs), length.out=50)
+u_phi_grid <- expand.grid(prior_grid_info$inputs, phi_grid)
+colnames(u_phi_grid) <- c("u", "phi")
+
+lprior_u <- calc_lprior_theta(matrix(u_phi_grid$u, ncol=1), theta_prior_params)
+
+gp_pred_list <- predict_independent_GPs(X_pred=prior_grid_info$inputs_scaled, gp_obj_list=emulator_info_list$gp_fits, 
+                                        gp_lib=emulator_info_list$settings$gp_lib, 
+                                        denormalize_predictions=TRUE, output_stats=emulator_info_list$output_stats)
+gp_pred_means <- sapply(gp_pred_list, function(x) x$mean)
+gp_pred_vars <- sapply(gp_pred_list, function(x) x$var_comb)
+
+phi_pred_mean_grid <- expand.grid(gp_pred_means, phi_grid)
+phi_pred_var_grid <- expand.grid(gp_pred_vars, phi_grid)
+u_phi_grid$gp_pred_mean <- phi_pred_mean_grid$Var1
+u_phi_grid$gp_pred_var <- phi_pred_mean_grid$Var2
+u_phi_grid$a <- u_phi_grid$gp_pred_mean - 0.5 * (u_phi_grid$gp_pred_var/sig2_eps)
+
+u_phi_grid$lpost_u_phi <- lprior_u - 0.5*log(u_phi_grid$gp_pred_var) - 0.5*u_phi_grid$gp_pred_mean^2/u_phi_grid$gp_pred_var + 
+                          0.5*u_phi_grid$a^2/u_phi_grid$gp_pred_var - 0.5*(u_phi_grid$phi-u_phi_grid$a)^2/u_phi_grid$gp_pred_var
+
+```
+
+
+# TODO: need to include points closer to the border of the parameter space in the design. Or at least use the points closer to the border 
+#       to scale the input data, even if they are not included as design points. 
+
+```{r}
+plt <- get_2d_heatmap_plot(X = u_phi_grid[,c("u","phi")], y = u_phi_grid$lpost_u_phi, raster = TRUE, 
+                           param_names=c("u", "phi"), bigger_is_better = TRUE, main_title = "(u,phi) posterior log density", 
+                           legend = "Log Post (u,phi) Density", 
+                           point_coords = c(linear_Gaussian_info$true_posterior$mean, linear_Gaussian_info$true_posterior$SSR))
+        
+plot(plt)
+```
+
+## Unnormalized log marginal posterior p(u|Sigma, Y)
+```{r}
+
+a <- gp_pred_means - 0.5 * gp_pred_vars/sig2_eps
+lpost_marg_u <- calc_lprior_theta(prior_grid_info$inputs, theta_prior_params) - 0.5*(gp_pred_means^2 - a^2)/gp_pred_vars
+
+plot(prior_grid_info$inputs, lpost_marg_u, type="l", main="log p(u|Sigma, Y)", xlim = c(-1,1), ylim=c(-300,0))
+plot(prior_grid_info$inputs, prior_grid_info$lpost, type="l", col="red", main="True lpost")
+
+# Conclusion: posterior is being dominated by GP uncertainty here moreso than mean. And the posterior 
+#             has lots of local minima due to GP uncertainty, making sampling difficult. 
+
+```
+
+
+
+## Exact Posterior Sampling 
+```{r}
+N_samp_exact <- 50000
+samp_exact <- matrix(rnorm(n=N_samp_exact, mean=drop(linear_Gaussian_info$true_posterior$mean), 
+                           sd = sqrt(drop(linear_Gaussian_info$true_posterior$Cov))), ncol = 1)
+```
+
+
+## Approximate Posterior Sampling 
+
+```{r}
+# Fix pre-MCMC estimates of calibration and likelihood parameters based on design data. 
+best_idx <- which.max(init_design_info$lpost)
+init_design_info$init_estimates$best_input_idx <- bext_idx
+init_design_info$init_estimates$best_input <- init_design_info$inputs[best_idx,]
+```
+
+
+```{r}
+# Round 0 approximate posterior sampling. 
+N_mcmc_approx <- 50000
+
+mcmc_approx_baseline <- mcmc_calibrate_ind_GP(computer_model_data = computer_model_data, 
+                                              theta_prior_params = theta_prior_params, 
+                                              emulator_info = lpost_emulator$emulator_info_list,
+                                              theta_init = init_design_info$init_estimates$best_input, 
+                                              sig_eps_init = lpost_emulator$sig2_eps, 
+                                              learn_sig_eps = FALSE, 
+                                              N_mcmc = N_mcmc_approx)
+
+mcmc_samp_dt <- format_mcmc_output(samp_list=mcmc_approx_baseline[c("theta")], test_label="baseline")
+burn_ins <- c(baseline=10000)
+```
+
+```{r}
+# Trace plot. 
+baseline_trace_plt <- get_trace_plots(mcmc_samp_dt, burn_in_start=burn_ins, test_labels="baseline", param_types="theta")
+plot(baseline_trace_plt[[1]])
+```
+
+
+```{r}
+# Approximate vs. True Samples. 
+samp_approx_hist <- as.matrix(select_mcmc_samp(mcmc_samp_dt, burn_in_start=burn_ins, test_labels="baseline", param_types="theta")$sample, ncol=1)
+
+baseline_hist_plot <- get_hist_plot(list(samp_exact[1:N_mcmc_approx,,drop=FALSE], samp_approx_hist), bins=50, xlab="samples", ylab="density", 
+                                         main_title = "Histogram", data_names = c("exact", "baseline")) 
+
+plot(baseline_hist_plot)
+
+```
+
+```{r}
+#
+# GP-MCMC-Gibbs algorithm
+#
+
+mcmc_approx_gibbs <- mcmc_calibrate_ind_GP_Gibbs(computer_model_data = computer_model_data, 
+                                                 theta_prior_params = theta_prior_params, 
+                                                 emulator_info = lpost_emulator$emulator_info_list,
+                                                 theta_init = init_design_info$init_estimates$best_input, 
+                                                 sig2_eps_init = lpost_emulator$sig2_eps, 
+                                                 learn_sig_eps = FALSE, 
+                                                 N_mcmc = N_mcmc_approx, 
+                                                 proposal_scale_multiplier = 1, 
+                                                 proposal_scale_decay = 0.7)
+
+mcmc_samp_dt <- format_mcmc_output(samp_list=mcmc_approx_gibbs[c("theta")], test_label="gibbs")
+burn_ins <- c(gibbs=10000)
+```
+
+```{r}
+# Trace plot. 
+gibbs_trace_plt <- get_trace_plots(mcmc_samp_dt, burn_in_start=burn_ins, test_labels="gibbs", param_types="theta")
+
+plot(gibbs_trace_plt[[1]])
+plot(seq_len(N_mcmc_approx-burn_ins["gibbs"]+1), mcmc_approx_gibbs$SSR[burn_ins["gibbs"]:N_mcmc_approx])
+```
+
+```{r}
+# Approximate vs. True Samples. 
+samp_approx_hist_gibbs <- as.matrix(select_mcmc_samp(mcmc_samp_dt, burn_in_start=burn_ins, test_labels="gibbs", param_types="theta")$sample, ncol=1)
+
+gibbs_hist_plot <- get_hist_plot(list(samp_exact[1:nrow(samp_approx_hist_gibbs),,drop=FALSE], 
+                                      samp_approx_hist_gibbs), bins=50, xlab="samples", ylab="density", 
+                                      main_title = "Histogram", data_names = c("exact", "gibbs")) + xlim(-3,3)
+
+plot(gibbs_hist_plot)
+
+```
+
+
+
+
+
+
+
+
+
+
 # Computer Model and Data 
 
 ```{r, include = FALSE}
@@ -275,7 +539,8 @@ mcmc_approx_gibbs <- mcmc_calibrate_ind_GP_Gibbs(computer_model_data = computer_
                                                  sig2_eps_init = init_design_info$init_estimates$best_sig2_eps, 
                                                  learn_sig_eps = TRUE, 
                                                  sig_eps_prior_params = sig_eps_prior_params, 
-                                                 N_mcmc = N_mcmc_approx)
+                                                 N_mcmc = N_mcmc_approx, 
+                                                 proposal_scale_multiplier=2)
 ```
 
 ```{r}
@@ -291,7 +556,16 @@ mcmc_samp_dt <- rbindlist(list(mcmc_samp_dt, format_mcmc_output(samp_list = mcmc
 # Should produce plots above looking at predictive mean/variance of each GP. 
 # Should also try re-running this with many more design points to see how behavior changes. 
 
-plot(1:1000, mcmc_approx_gibbs$theta[1:1000,2], type="l")
+# Other ideas:
+# - Heatmap of true posterior density; joint between calibration parameter and phi, with fixed variance. 
+# - Try fixing u or variance. 
+
+end <- 3000
+
+plot(1:end, mcmc_approx_gibbs$theta[1:end,1])
+plot(1:end, mcmc_approx_gibbs$sig_eps[1:end,2])
+plot(1:end, mcmc_approx_gibbs$SSR[1:end,2])
+plot(1:end, mcmc_approx_gibbs$cov_prop_scales[1:end])
 ```
 
 
