--- a/vsem_calibration_tests/gp_mcmc_comparison.Rmd
+++ b/vsem_calibration_tests/gp_mcmc_comparison.Rmd
@@ -42,7 +42,6 @@ linear_Gaussian_info$true_posterior$SSR <- get_computer_model_SSR(computer_model
 computer_model_data <- linear_Gaussian_info$computer_model_data
 theta_prior_params <- linear_Gaussian_info$theta_prior_params
 
-
 plot(1:N_obs, computer_model_data$data_obs, main = "Ground Truth and Observed Data", xlab = "t")
 lines(1:N_obs, computer_model_data$data_ref, col = "red")
 ```
@@ -55,6 +54,7 @@ input_bounds <- matrix(c(min=qnorm(.01, theta_prior_params$param1, theta_prior_p
                          max=qnorm(.99, theta_prior_params$param1, theta_prior_params$param2)), ncol=1)
 rownames(input_bounds) <- c("min", "max")
 colnames(input_bounds) <- computer_model_data$pars_cal_names
+theta_prior_params_trunc <- truncate_prior_theta(theta_prior_params, input_bounds)
 
 design_settings <- data.frame(N_design = 3, design_method = "LHS", design_seed = 5)
 init_design_info <- get_input_output_design(N_points = design_settings$N_design,
@@ -82,7 +82,7 @@ prior_grid_info$lpost <- calc_lpost_theta_product_lik(computer_model_data = comp
                                                       theta_vals = prior_grid_info$inputs, 
                                                       vars_obs = diag(computer_model_data$Sig_eps), 
                                                       SSR = prior_grid_info$outputs,
-                                                      na.rm = TRUE, theta_prior_params = theta_prior_params, 
+                                                      na.rm = TRUE, theta_prior_params=theta_prior_params, 
                                                       return_list = FALSE)
 
 
@@ -141,7 +141,7 @@ phi_grid <- seq(min(prior_grid_info$outputs), max(prior_grid_info$outputs), leng
 u_phi_grid <- expand.grid(prior_grid_info$inputs, phi_grid)
 colnames(u_phi_grid) <- c("u", "phi")
 
-lprior_u <- calc_lprior_theta(matrix(u_phi_grid$u, ncol=1), theta_prior_params)
+lprior_u <- calc_lprior_theta(matrix(u_phi_grid$u, ncol=1), theta_prior_params_trunc)
 
 gp_pred_list <- predict_independent_GPs(X_pred=prior_grid_info$inputs_scaled, gp_obj_list=emulator_info_list$gp_fits, 
                                         gp_lib=emulator_info_list$settings$gp_lib, 
@@ -177,15 +177,27 @@ plot(plt)
 ```{r}
 
 a <- gp_pred_means - 0.5 * gp_pred_vars/sig2_eps
-lpost_marg_u <- calc_lprior_theta(prior_grid_info$inputs, theta_prior_params) - 0.5*(gp_pred_means^2 - a^2)/gp_pred_vars
+lpost_marg_u <- calc_lprior_theta(prior_grid_info$inputs, theta_prior_params_trunc) - 0.5*(gp_pred_means^2 - a^2)/gp_pred_vars
 
-plot(prior_grid_info$inputs, lpost_marg_u, type="l", main="log p(u|Sigma, Y)", xlim = c(-1,1), ylim=c(-300,0))
+plot(prior_grid_info$inputs, lpost_marg_u, type="l", main="log p(u|Sigma, Y)") # , xlim = c(-1,1), ylim=c(-300,0))
 plot(prior_grid_info$inputs, prior_grid_info$lpost, type="l", col="red", main="True lpost")
 
 # Conclusion: posterior is being dominated by GP uncertainty here moreso than mean. And the posterior 
 #             has lots of local minima due to GP uncertainty, making sampling difficult. 
 
 ```
+
+```{r}
+test_grid <- seq(1.571, 1.977, length.out=101)
+lpost_vals <- dnorm(test_grid, linear_Gaussian_info$true_posterior$mean, sqrt(linear_Gaussian_info$true_posterior$Cov), log=FALSE)
+
+plot(test_grid, lpost_vals, type="l")
+plot(test_grid, log(lpost_vals), type="l")
+
+
+```
+
+
 
 
 
@@ -208,11 +220,10 @@ init_design_info$init_estimates$best_input <- init_design_info$inputs[best_idx,]
 
 
 ```{r}
-# Round 0 approximate posterior sampling. 
 N_mcmc_approx <- 50000
 
 mcmc_approx_baseline <- mcmc_calibrate_ind_GP(computer_model_data = computer_model_data, 
-                                              theta_prior_params = theta_prior_params, 
+                                              theta_prior_params = theta_prior_params_trunc, 
                                               emulator_info = lpost_emulator$emulator_info_list,
                                               theta_init = init_design_info$init_estimates$best_input, 
                                               sig_eps_init = lpost_emulator$sig2_eps, 
@@ -247,7 +258,7 @@ plot(baseline_hist_plot)
 #
 
 mcmc_approx_gibbs <- mcmc_calibrate_ind_GP_Gibbs(computer_model_data = computer_model_data, 
-                                                 theta_prior_params = theta_prior_params, 
+                                                 theta_prior_params = theta_prior_params_trunc, 
                                                  emulator_info = lpost_emulator$emulator_info_list,
                                                  theta_init = init_design_info$init_estimates$best_input, 
                                                  sig2_eps_init = lpost_emulator$sig2_eps, 
@@ -274,9 +285,13 @@ samp_approx_hist_gibbs <- as.matrix(select_mcmc_samp(mcmc_samp_dt, burn_in_start
 
 gibbs_hist_plot <- get_hist_plot(list(samp_exact[1:nrow(samp_approx_hist_gibbs),,drop=FALSE], 
                                       samp_approx_hist_gibbs), bins=50, xlab="samples", ylab="density", 
-                                      main_title = "Histogram", data_names = c("exact", "gibbs")) + xlim(-3,3)
+                                      main_title = "Histogram", data_names = c("exact", "gibbs"))
+gibbs_hist_plot_2 <- get_hist_plot(list(samp_approx_hist_gibbs),
+                                   bins=50, xlab="samples", ylab="density", 
+                                   main_title = "Histogram", data_names = c("gibbs"))
 
 plot(gibbs_hist_plot)
+plot(gibbs_hist_plot_2)
 
 ```
 
